# SD240_PostgreSQL-FastAPI_Render

./: pyproject.toml
orm/: config.py
